[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Client/client.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Login" type="HTTPRequest" parent="."]

[node name="ChangeBio" type="HTTPRequest" parent="."]

[node name="Logout" type="HTTPRequest" parent="."]

[node name="CreateUser" type="HTTPRequest" parent="."]

[node name="GetUser" type="HTTPRequest" parent="."]

[node name="FollowUser" type="HTTPRequest" parent="."]

[node name="UnfollowUser" type="HTTPRequest" parent="."]

[node name="GetFollows" type="HTTPRequest" parent="."]

[node name="CreateNode" type="HTTPRequest" parent="."]

[node name="GetLevel" type="HTTPRequest" parent="."]

[node name="UpdateNodeLevel" type="HTTPRequest" parent="."]

[node name="GetNode" type="HTTPRequest" parent="."]

[node name="LinkNodes" type="HTTPRequest" parent="."]

[node name="GetNextLinks" type="HTTPRequest" parent="."]

[node name="GetPreviousLinks" type="HTTPRequest" parent="."]

[node name="UpdatePlaycount" type="HTTPRequest" parent="."]

[node name="UpdateRating" type="HTTPRequest" parent="."]

[node name="UpdateNodeDescription" type="HTTPRequest" parent="."]

[node name="UpdateNodeTitle" type="HTTPRequest" parent="."]
