[gd_scene load_steps=2 format=3 uid="uid://cyawugereckka"]

[ext_resource type="Script" path="res://client.gd" id="1_4rlb6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4rlb6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="loginButton" type="Button" parent="."]
layout_mode = 0
offset_left = 317.0
offset_top = 152.0
offset_right = 816.0
offset_bottom = 261.0
text = "LOGIN"

[node name="login" type="HTTPRequest" parent="."]

[node name="changeBioButton" type="Button" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 316.0
offset_right = 805.0
offset_bottom = 557.0
text = "CHANGE BIO"

[node name="changeBio" type="HTTPRequest" parent="."]

[connection signal="pressed" from="loginButton" to="." method="_on_login_button_pressed"]
[connection signal="request_completed" from="login" to="." method="_on_login_request_completed"]
[connection signal="pressed" from="changeBioButton" to="." method="_on_change_bio_button_pressed"]
[connection signal="request_completed" from="changeBio" to="." method="_on_change_bio_request_completed"]
